docs/en/5.2.2/api/battery.md
#Battery
<div class="btn-group"><a href="#Methods" class="btn"><i class="icon-cog"></i> Methods<sup>&nbsp;6</sub></a><a class="btn dropdown-toggle" data-toggle="dropdown" data-target="#" href="#Methods" >  <span class="caret"></span>&nbsp;</a><ul class="dropdown-menu" style="max-height: 500px;overflow: auto;"><li class="disabled"><a tabindex="-1" href="#"><b><i>Methods - Class</i></b></a><li><a href="#mbatteryDiagnostics" data-target="cMethodbatteryDiagnostics" class="autouncollapse">batteryDiagnostics</a></li><li><a href="#mbatteryStatus" data-target="cMethodbatteryStatus" class="autouncollapse">batteryStatus</a></li><li><a href="#mhideIcon" data-target="cMethodhideIcon" class="autouncollapse">hideIcon</a></li><li><a href="#mshowIcon" data-target="cMethodshowIcon" class="autouncollapse">showIcon</a></li><li><a href="#msmartBatteryStatus" data-target="cMethodsmartBatteryStatus" class="autouncollapse">smartBatteryStatus</a></li><li><a href="#mstopBatteryStatus" data-target="cMethodstopBatteryStatus" class="autouncollapse">stopBatteryStatus</a></li></li></ul></div><div class="btn-group"><a href="#Properties" class="btn"><i class="icon-list"></i> Properties<sup>&nbsp;3</sup></a><button href="#" class="btn dropdown-toggle" data-toggle="dropdown">  <span class="caret"></span>&nbsp;</button><ul class="dropdown-menu" style="max-height: 500px;overflow: auto;"><li class="disabled"><a tabindex="-1" href="#"><b><i>Class Properties</i></b></a><li><a href="#paverageCurrentConsumption" data-target="cPropertyaverageCurrentConsumption" class="autouncollapse">averageCurrentConsumption</a></li><li><a href="#prefreshInterval" data-target="cPropertyrefreshInterval" class="autouncollapse">refreshInterval</a></li><li><a href="#ptripDuration" data-target="cPropertytripDuration" class="autouncollapse">tripDuration</a></li></li></ul></div><div class="btn-group"><a href="#Examples" class="btn"><i class="icon-edit"></i> Examples<sup>&nbsp;2</sup></a><button href="#" class="btn dropdown-toggle" data-toggle="dropdown">  <span class="caret"></span>&nbsp;</button><ul class="dropdown-menu" style="max-height: 500px;overflow: auto;"><li><a href="#e0" data-target="eExample0" class="autouncollapse">Retrieve the Battery status</a></li><li><a href="#e1" data-target="eExample1" class="autouncollapse">Working with the Battery indicator</a></li></ul></div><div class="btn-group"><a href="#Remarks" class="btn"><i class="icon-warning-sign"></i> Remarks<sup>&nbsp;3</sup></a><button href="#" class="btn dropdown-toggle" data-toggle="dropdown">  <span class="caret"></span>&nbsp;</button><ul class="dropdown-menu" style="max-height: 500px;overflow: auto;"><li><a href="#r0" data-target="rRemark0" class="autouncollapse">Icon Layout</a></li><li><a href="#r1" data-target="rRemark1" class="autouncollapse">Overlapping Indicators</a></li><li><a href="#r2" data-target="rRemark2" class="autouncollapse">Screen Orientation</a></li></ul></div><div class="btn-group"><a href="#License" class="btn"><i class="icon-shopping-cart"></i> Licensing</a></div><div class="btn-group pull-right"><button class="btn dropdown-toggle" id="apiFilterBtn" data-toggle="dropdown" href="#" title="Filter Properties and Methods"><i class="icon-filter "></i>Show</button><select id="apiFilter" class="dropdown-menu apiFilter"><option value="all">All</option><option value="js">JavaScript</option><option value="ruby">Ruby</option><option value="android">Android</option><option value="ios">iOS</option><option value="wm">Windows Mobile</option><option value="wp8">Windows Phone 8</option><option value="w32">Windows Desktop</option><option value="msi">MSI Only</option></select></div><div  id="apibody" style="overflow:auto;padding-right: 5px;">
<p>The Battery API is used to notify the user of the remaining power in the battery. Windows Mobile / CE devices also support displaying a small indicator to show the available power.</p>
<h2>Enabling the API</h2>

<p>In order to use this API you must include the following extension in your <code>build.yml</code>.</p>

<pre><code>:::ruby
extensions: ["indicators"]
</code></pre>

<p>The <code>indicators</code> extension is also included automatically if you specify the following in your <code>build.yml</code></p>

<pre><code>:::ruby
app_type: "rhoelements"
</code></pre>

<blockquote><p>Note: If you are building a Windows Mobile or Windows CE app with this API, you must set your app_type as &ldquo;rhoelements&rdquo; in your <code>build.yml</code> as shown in this <a href="../guide/build_config#other-build-time-settings">build-time settings example</a>.</p></blockquote>

<h2>JavaScript Usage</h2>

<p>Be sure to review the <a href="/guide/api_js">JavaScript API Usage</a> guide for important information about using this API in JavaScript.</p>

<h2>Ruby Usage</h2>

<p>Be sure to review the <a href="/guide/api_ruby">Ruby API Usage</a> guide for important information about using this API in Ruby.</p>

<h2>Persistence</h2>

<p>With the old PocketBrowser / RhoElements 1 APIs, any events, such as <code>batteryEvent</code> were canceled when a full navigate was performed. The original reason for this was a limitation of the IE engine on WM5 devices. When moving to the common API this was changed so that callbacks are not canceled.</p>


<a name='Methods'></a>
<h2><i class='icon-cog'></i>Methods</h2>

<div class="accordion" id="accordion"><a name ='mbatteryDiagnostics'/><div class=' method  js ruby android msi' id='mbatteryDiagnostics'><h3><strong  >batteryDiagnostics</strong><span style='font-size:.7em;font-weight:normal;'>(<span class='text-info'>CallBackHandler</span> callback)</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mbatteryDiagnostics1" data-toggle="tab">Description</a></li><li ><a href="#mbatteryDiagnostics2" data-toggle="tab">Parameters</a></li><li ><a href="#mbatteryDiagnostics3" data-toggle="tab">Callback</a></li><li ><a href="#mbatteryDiagnostics4" data-toggle="tab">Return</a></li><li ><a href="#mbatteryDiagnostics6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-batteryDiagnostics'><div class="tab-pane fade active in" id="mbatteryDiagnostics1"><p>The BatteryDiagnostics method returns parameters for further battery analysis. Not all return values will be supported by all batteries. Any parameters that cannot be retrieved will return &lsquo;undefined&rsquo;. In Android, Currently supported only on the MC18 device</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/motowebkit.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Zebra Technologies Devices Only">(Currently supported only on the MC18 device)</p></div></p></div><div class="tab-pane fade" id="mbatteryDiagnostics2"><div><p><strong>Parameters</strong></p><ul><li>callback : <span class='text-info'>CallBackHandler</span> <span class='label label-info'>Optional</span> </li></ul></div></div><div class="tab-pane fade" id="mbatteryDiagnostics3"><div><p><strong>Async Callback Returning Parameters: <span class='text-info'>HASH</span></strong></p><ul><ul><li>stateOfHealthPercent : <span class='text-info'>STRING</span><p><p>The current maximum battery capacity as a percentage of the battery rated capacity</p>
 </p></li><li>batteryCapacityPercent : <span class='text-info'>STRING</span><p><p>The remaining battery capacity percentage</p>
 </p></li><li>batteryCapacityMinutes : <span class='text-info'>STRING</span><p><p>The remaining battery capacity in minutes. Calculations are based on the averageCurrentConsumption parameter</p>
 </p></li><li>batteryExpirationInMonths : <span class='text-info'>STRING</span><p><p>Prediction in number of months when the battery should be replaced. Returns undefined for Android.</p>
 </p></li><li>previousBatteryReplacement : <span class='text-info'>STRING</span><p><p>Duration in days since the battery was last replaced</p>
 </p></li><li>timeSinceLastColdBoot : <span class='text-info'>STRING</span><p><p>Time in minutes since the device was last cold booted</p>
 </p></li><li>requiredChargeTime : <span class='text-info'>STRING</span><p><p>Calculates the charge time required in minutes based on the tripDuration and averageCurrentConsumption parameters.</p>
 </p></li><li>chargingTime : <span class='text-info'>STRING</span><p><p>The duration of time for which the unit was last charging, in minutes</p>
 </p></li></ul></ul></div></div><div class="tab-pane fade" id="mbatteryDiagnostics4"><div><p><strong>Synchronous Return:</strong></p><ul><li>HASH : this method also supports async callbacks - check the Callback tab for callback return parameters.<ul><li>stateOfHealthPercent : <span class='text-info'>STRING</span><p><p>The current maximum battery capacity as a percentage of the battery rated capacity</p>
 </p></li><li>batteryCapacityPercent : <span class='text-info'>STRING</span><p><p>The remaining battery capacity percentage</p>
 </p></li><li>batteryCapacityMinutes : <span class='text-info'>STRING</span><p><p>The remaining battery capacity in minutes. Calculations are based on the averageCurrentConsumption parameter</p>
 </p></li><li>batteryExpirationInMonths : <span class='text-info'>STRING</span><p><p>Prediction in number of months when the battery should be replaced. Returns undefined for Android.</p>
 </p></li><li>previousBatteryReplacement : <span class='text-info'>STRING</span><p><p>Duration in days since the battery was last replaced</p>
 </p></li><li>timeSinceLastColdBoot : <span class='text-info'>STRING</span><p><p>Time in minutes since the device was last cold booted</p>
 </p></li><li>requiredChargeTime : <span class='text-info'>STRING</span><p><p>Calculates the charge time required in minutes based on the tripDuration and averageCurrentConsumption parameters.</p>
 </p></li><li>chargingTime : <span class='text-info'>STRING</span><p><p>The duration of time for which the unit was last charging, in minutes</p>
 </p></li></ul></li></ul></div></div><div class="tab-pane fade" id="mbatteryDiagnostics6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.Battery.batteryDiagnostics(<span class='text-info'>CallBackHandler</span> callback)</code> </li><li>Ruby: <code>Rho::Battery.batteryDiagnostics(<span class='text-info'>CallBackHandler</span> callback)</code></li></ul></li></ul></div></div></div>  </div><a name ='mbatteryStatus'/><div class=' method  js ruby android ios' id='mbatteryStatus'><h3><strong  >batteryStatus</strong><span style='font-size:.7em;font-weight:normal;'>(<span class="text-info">HASH</span> propertyMap, <span class='text-info'>CallBackHandler</span> callback)</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mbatteryStatus1" data-toggle="tab">Description</a></li><li ><a href="#mbatteryStatus2" data-toggle="tab">Parameters</a></li><li ><a href="#mbatteryStatus3" data-toggle="tab">Callback</a></li><li ><a href="#mbatteryStatus4" data-toggle="tab">Return</a></li><li ><a href="#mbatteryStatus6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-batteryStatus'><div class="tab-pane fade active in" id="mbatteryStatus1"><p>Retrieve the current battery level. If a callback is provided to retrieve the battery then it will be called periodically at a frequency determined by the trigger property.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"></p></div></p></div><div class="tab-pane fade" id="mbatteryStatus2"><div><p><strong>Parameters</strong></p><ul><li>propertyMap : <span class='text-info'>HASH</span><p><p>The properties associated with accessing the battery status.</p>
 </p></li><ul><li>trigger : <span class='text-info'>STRING</span><span class='label '> Default: Platform Dependant</span><p><p>What will cause the batteryStatus callback to fire. It is recommended to use system events to conserve battery life. Please note, that iOS devices have no system triggers and will provide updates only with a specified period (Trigger value will be ignored)</p>
 </p><p><strong>Possible Values</strong> :</p> <dl  ><dt>Constant: Rho::Battery.BATTERY_TRIGGER_PERIODIC (For Ruby use "::" for all "." when referencing constants)<br/> String:periodic</dt><dd><p>The batteryStatus callback will fire periodically at the specified refresh interval. This is the default setting on Windows Mobile / CE / Embedded but those platforms do also support the system trigger. Not supported on Android.</p>
</dt><dt>Constant: Rho::Battery.BATTERY_TRIGGER_SYSTEM (For Ruby use "::" for all "." when referencing constants)<br/> String:system</dt><dd><p>The batteryStatus callback will fire when the underlying operating system notifies that there has been a change to the battery level. The resolution of this change will vary depending on operating system, for example on Windows Mobile the notifications only occur when &lsquo;critical&rsquo;, &lsquo;full&rsquo; etc.</p>
</dt></dl></li><li>refreshInterval : <span class='text-info'>INTEGER</span><p><p>Alternative way of specifying the refreshInterval parameter. If you are using a system trigger then this parameter will be ignored.</p>
 </p></li></ul><li>callback : <span class='text-info'>CallBackHandler</span> <span class='label label-info'>Optional</span> </li></ul></div></div><div class="tab-pane fade" id="mbatteryStatus3"><div><p><strong>Async Callback Returning Parameters: <span class='text-info'>HASH</span></strong></p><ul><ul><li>acLineStatus : <span class='text-info'>BOOLEAN</span><p><p>Whether or not the device is connected to external power.</p>
 </p></li><li>batteryLifePercent : <span class='text-info'>INTEGER</span><p><p>Displays the remaining battery power as a percentage value between 0 and 100. For some Zebra Android devices, the API will return a value of 255 at all times while the battery is being charged. The same value also might be displayed for a few seconds initially after reboot while the battery is being discharged. This is in accordance with hardware design specs and should be taken into account when using the API.</p>
 </p></li><li>backupBatteryLifePercent : <span class='text-info'>INTEGER</span><p><p>The remaining backup battery power as a percentage between 0 and 100. Supported only on Symbol Technologies Windows Mobile / CE / Embedded devices.</p>
 Platforms:WM </p></li><li>trigger : <span class='text-info'>STRING</span><p><p>Human readable form of what has caused this callback to fire. This value will be OS dependent. On Windows Mobile / CE / Embedded it will be one of: &ldquo;High Battery&rdquo;, &ldquo;Low Battery&rdquo;, &ldquo;Critical Battery&rdquo;, &ldquo;Charging&rdquo;, &ldquo;No Battery&rdquo;, &ldquo;Unknown&rdquo;. In the case of periodic updates, this field will contain the last known status of the battery.</p>
 Platforms:WM, CE, Android </p></li><li>batteryLifeKnown : <span class='text-info'>BOOLEAN</span><p><p>Supported only on Symbol Technologies' Windows Mobile / CE / Embedded devices. The battery life will not be readable for a period of time after removing from an AC power source and this parameter will state whether the batteryLifePercent value is accurate.</p>
 Platforms:WM </p></li><li>backupBatteryLifeKnown : <span class='text-info'>BOOLEAN</span><p><p>Supported only on Symbol Technologies' Windows Mobile / CE / Embedded devices. The battery life will not be readable for a period of time after removing from an AC power source and this parameter will state whether the backupBatteryLifePercent value is accurate.</p>
 Platforms:WM </p></li></ul></ul></div></div><div class="tab-pane fade" id="mbatteryStatus4"><div><p><strong>Synchronous Return:</strong></p><ul><li>HASH : this method also supports async callbacks - check the Callback tab for callback return parameters.<ul><li>acLineStatus : <span class='text-info'>BOOLEAN</span><p><p>Whether or not the device is connected to external power.</p>
 </p></li><li>batteryLifePercent : <span class='text-info'>INTEGER</span><p><p>Displays the remaining battery power as a percentage value between 0 and 100. For some Zebra Android devices, the API will return a value of 255 at all times while the battery is being charged. The same value also might be displayed for a few seconds initially after reboot while the battery is being discharged. This is in accordance with hardware design specs and should be taken into account when using the API.</p>
 </p></li><li>backupBatteryLifePercent : <span class='text-info'>INTEGER</span><p><p>The remaining backup battery power as a percentage between 0 and 100. Supported only on Symbol Technologies Windows Mobile / CE / Embedded devices.</p>
 Platforms:WM </p></li><li>trigger : <span class='text-info'>STRING</span><p><p>Human readable form of what has caused this callback to fire. This value will be OS dependent. On Windows Mobile / CE / Embedded it will be one of: &ldquo;High Battery&rdquo;, &ldquo;Low Battery&rdquo;, &ldquo;Critical Battery&rdquo;, &ldquo;Charging&rdquo;, &ldquo;No Battery&rdquo;, &ldquo;Unknown&rdquo;. In the case of periodic updates, this field will contain the last known status of the battery.</p>
 Platforms:WM, CE, Android </p></li><li>batteryLifeKnown : <span class='text-info'>BOOLEAN</span><p><p>Supported only on Symbol Technologies' Windows Mobile / CE / Embedded devices. The battery life will not be readable for a period of time after removing from an AC power source and this parameter will state whether the batteryLifePercent value is accurate.</p>
 Platforms:WM </p></li><li>backupBatteryLifeKnown : <span class='text-info'>BOOLEAN</span><p><p>Supported only on Symbol Technologies' Windows Mobile / CE / Embedded devices. The battery life will not be readable for a period of time after removing from an AC power source and this parameter will state whether the backupBatteryLifePercent value is accurate.</p>
 Platforms:WM </p></li></ul></li></ul></div></div><div class="tab-pane fade" id="mbatteryStatus6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.Battery.batteryStatus(<span class="text-info">HASH</span> propertyMap, <span class='text-info'>CallBackHandler</span> callback)</code> </li><li>Ruby: <code>Rho::Battery.batteryStatus(<span class="text-info">HASH</span> propertyMap, <span class='text-info'>CallBackHandler</span> callback)</code></li></ul></li></ul></div></div></div>  </div><a name ='mhideIcon'/><div class=' method  js ruby android msi' id='mhideIcon'><h3><strong  >hideIcon</strong><span style='font-size:.7em;font-weight:normal;'>()</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mhideIcon1" data-toggle="tab">Description</a></li><li ><a href="#mhideIcon4" data-toggle="tab">Return</a></li><li ><a href="#mhideIcon6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-hideIcon'><div class="tab-pane fade active in" id="mhideIcon1"><p>Hide the icon if it has been previously set by the &lsquo;showIcon&rsquo; call.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/motowebkit.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Zebra Technologies Devices Only">(All platforms support batteryStatus, which can be used to draw your own level indicator or display an appropriate graphic.)</p></div></p></div><div class="tab-pane fade" id="mhideIcon2"></div><div class="tab-pane fade" id="mhideIcon3"></div><div class="tab-pane fade" id="mhideIcon4"><div><p><strong>Synchronous Return:</strong></p><ul><li>Void</li></ul></div></div><div class="tab-pane fade" id="mhideIcon6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.Battery.hideIcon()</code> </li><li>Ruby: <code>Rho::Battery.hideIcon()</code></li></ul></li></ul></div></div></div>  </div><a name ='mshowIcon'/><div class=' method  js ruby android msi' id='mshowIcon'><h3><strong  >showIcon</strong><span style='font-size:.7em;font-weight:normal;'>(<span class="text-info">HASH</span> propertyMap)</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mshowIcon1" data-toggle="tab">Description</a></li><li ><a href="#mshowIcon2" data-toggle="tab">Parameters</a></li><li ><a href="#mshowIcon4" data-toggle="tab">Return</a></li><li ><a href="#mshowIcon6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-showIcon'><div class="tab-pane fade active in" id="mshowIcon1"><p>Overlays a small battery icon on top of the view indicating the remaining battery strength. This is particularly useful in full screen applications that cover the system battery level indicator.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/motowebkit.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Zebra Technologies Devices Only">(All platforms support batteryStatus, which can be used to draw your own level indicator or display an appropriate graphic.)</p></div></p></div><div class="tab-pane fade" id="mshowIcon2"><div><p><strong>Parameters</strong></p><ul><li>propertyMap : <span class='text-info'>HASH</span><p><p>The properties associated with the indicator, its position and color.</p>
 </p></li><ul><li>left : <span class='text-info'>INTEGER</span><span class='label '> Default: [Top left of the screen]</span><p><p>The absolute horizontal position of the indicator in pixels. This value is relative to the screen and not the view, so non-fullscreen applications should take care not to display the indicator off screen.</p>
 </p></li><li>top : <span class='text-info'>INTEGER</span><span class='label '> Default: [Top left of the screen]</span><p><p>The absolute vertical position of the indicator in pixels. Positive numbers go towards the bottom of the screen. This value is relative to the screen and not the view, so non-fullscreen applications should take care not to display the indicator off screen.</p>
 </p></li><li>layout : <span class='text-info'>STRING</span><span class='label '> Default: [Right]</span><p><p>Sets the orientation of the icon, see the remarks section for illustrations.</p>
 </p><p><strong>Possible Values</strong> :</p> <dl  ><dt>Constant: Rho::Battery.BATTERY_LAYOUT_LEFT (For Ruby use "::" for all "." when referencing constants)<br/> String:left</dt><dd><p>See the remarks section for illustrations of icon layout.</p>
</dt><dt>Constant: Rho::Battery.BATTERY_LAYOUT_RIGHT (For Ruby use "::" for all "." when referencing constants)<br/> String:right</dt><dd><p>See the remarks section for illustrations of icon layout.</p>
</dt><dt>Constant: Rho::Battery.BATTERY_LAYOUT_UP (For Ruby use "::" for all "." when referencing constants)<br/> String:up</dt><dd><p>See the remarks section for illustrations of icon layout.</p>
</dt><dt>Constant: Rho::Battery.BATTERY_LAYOUT_DOWN (For Ruby use "::" for all "." when referencing constants)<br/> String:down</dt><dd><p>See the remarks section for illustrations of icon layout.</p>
</dt></dl></li><li>color : <span class='text-info'>STRING</span><p><p>The color of the icon. This value must be specified as a Hex value in the format #000000 to #FFFFFF. Alpha values are not supported, i.e. you can only use the component parts RRGGBB.</p>
 </p></li></ul></ul></div></div><div class="tab-pane fade" id="mshowIcon3"></div><div class="tab-pane fade" id="mshowIcon4"><div><p><strong>Synchronous Return:</strong></p><ul><li>Void</li></ul></div></div><div class="tab-pane fade" id="mshowIcon6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.Battery.showIcon(<span class="text-info">HASH</span> propertyMap)</code> </li><li>Ruby: <code>Rho::Battery.showIcon(<span class="text-info">HASH</span> propertyMap)</code></li></ul></li></ul></div></div></div>  </div><a name ='msmartBatteryStatus'/><div class=' method  js ruby msi' id='msmartBatteryStatus'><h3><strong  >smartBatteryStatus</strong><span style='font-size:.7em;font-weight:normal;'>(<span class='text-info'>CallBackHandler</span> callback)</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#msmartBatteryStatus1" data-toggle="tab">Description</a></li><li ><a href="#msmartBatteryStatus2" data-toggle="tab">Parameters</a></li><li ><a href="#msmartBatteryStatus3" data-toggle="tab">Callback</a></li><li ><a href="#msmartBatteryStatus4" data-toggle="tab">Return</a></li><li ><a href="#msmartBatteryStatus6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-smartBatteryStatus'><div class="tab-pane fade active in" id="msmartBatteryStatus1"><p>Returns the various parameters relating to battery charge and battery hardware. Not all return values may be supported by all batteries.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/motowebkit.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Zebra Technologies Devices Only">(Scanners on Symbol Technologies' Windows Mobile / CE / Embedded devices)</p></div></p></div><div class="tab-pane fade" id="msmartBatteryStatus2"><div><p><strong>Parameters</strong></p><ul><li>callback : <span class='text-info'>CallBackHandler</span> <span class='label label-info'>Optional</span> </li></ul></div></div><div class="tab-pane fade" id="msmartBatteryStatus3"><div><p><strong>Async Callback Returning Parameters: <span class='text-info'>HASH</span></strong></p><ul><ul><li>serialNumber : <span class='text-info'>STRING</span><p><p>The serial number of the battery.</p>
 </p></li><li>partNumber : <span class='text-info'>STRING</span><p><p>The Symbol Technologies' part number of the battery, e.g. 21-65587 Rev. A.</p>
 </p></li><li>batteryChargeCycles : <span class='text-info'>INTEGER</span><p><p>The number of times the battery has been charged. Partial charges are aggregated, therefore each charge cycle count represents one full charge / discharge cycle. The battery charge cycle count gets updated when the battery charging state changes from charging to not charging. Cycle count may not accurately predict the life of a battery.</p>
 </p></li><li>ratedCapacity : <span class='text-info'>INTEGER</span><p><p>Rated capacity of the battery in mAh.</p>
 </p></li><li>manufactureDate : <span class='text-info'>STRING</span><p><p>Date the battery was manufactured expressed as MM/DD/YYYY.</p>
 </p></li><li>stateOfHealth : <span class='text-info'>STRING</span><p><p>The health of the battery.</p>
 </p><p><strong>Possible Values</strong> :</p> <dl  ><dt>Constant: Rho.Battery.SMART_BATTERY_HEALTHY (For Ruby use "::" for all "." when referencing constants)<br/> String:Constant: Rho::Battery.SMART_BATTERY_HEALTHY (For Ruby use "::" for all "." when referencing constants)<br/> String:healthy</dt><dd><p>The battery is healthy.</p>
</dt><dt>Constant: Rho.Battery.SMART_BATTERY_UNHEALTHY (For Ruby use "::" for all "." when referencing constants)<br/> String:Constant: Rho::Battery.SMART_BATTERY_UNHEALTHY (For Ruby use "::" for all "." when referencing constants)<br/> String:unhealthy</dt><dd><p>The battery is unhealthy.</p>
</dt><dt>Constant: Rho.Battery.SMART_BATTERY_UNKNOWN (For Ruby use "::" for all "." when referencing constants)<br/> String:Constant: Rho::Battery.SMART_BATTERY_UNKNOWN (For Ruby use "::" for all "." when referencing constants)<br/> String:unknown</dt><dd><p>The battery health is unknown.</p>
</dt></dl></li></ul></ul></div></div><div class="tab-pane fade" id="msmartBatteryStatus4"><div><p><strong>Synchronous Return:</strong></p><ul><li>HASH : this method also supports async callbacks - check the Callback tab for callback return parameters.<ul><li>serialNumber : <span class='text-info'>STRING</span><p><p>The serial number of the battery.</p>
 </p></li><li>partNumber : <span class='text-info'>STRING</span><p><p>The Symbol Technologies' part number of the battery, e.g. 21-65587 Rev. A.</p>
 </p></li><li>batteryChargeCycles : <span class='text-info'>INTEGER</span><p><p>The number of times the battery has been charged. Partial charges are aggregated, therefore each charge cycle count represents one full charge / discharge cycle. The battery charge cycle count gets updated when the battery charging state changes from charging to not charging. Cycle count may not accurately predict the life of a battery.</p>
 </p></li><li>ratedCapacity : <span class='text-info'>INTEGER</span><p><p>Rated capacity of the battery in mAh.</p>
 </p></li><li>manufactureDate : <span class='text-info'>STRING</span><p><p>Date the battery was manufactured expressed as MM/DD/YYYY.</p>
 </p></li><li>stateOfHealth : <span class='text-info'>STRING</span><p><p>The health of the battery.</p>
 </p><p><strong>Possible Values</strong> :</p> <dl  ><dt>Constant: Rho::Battery.SMART_BATTERY_HEALTHY (For Ruby use "::" for all "." when referencing constants)<br/> String:healthy</dt><dd><p>The battery is healthy.</p>
</dt><dt>Constant: Rho::Battery.SMART_BATTERY_UNHEALTHY (For Ruby use "::" for all "." when referencing constants)<br/> String:unhealthy</dt><dd><p>The battery is unhealthy.</p>
</dt><dt>Constant: Rho::Battery.SMART_BATTERY_UNKNOWN (For Ruby use "::" for all "." when referencing constants)<br/> String:unknown</dt><dd><p>The battery health is unknown.</p>
</dt></dl></li></ul></li></ul></div></div><div class="tab-pane fade" id="msmartBatteryStatus6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.Battery.smartBatteryStatus(<span class='text-info'>CallBackHandler</span> callback)</code> </li><li>Ruby: <code>Rho::Battery.smartBatteryStatus(<span class='text-info'>CallBackHandler</span> callback)</code></li></ul></li></ul></div></div></div>  </div><a name ='mstopBatteryStatus'/><div class=' method  js ruby android ios' id='mstopBatteryStatus'><h3><strong  >stopBatteryStatus</strong><span style='font-size:.7em;font-weight:normal;'>()</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mstopBatteryStatus1" data-toggle="tab">Description</a></li><li ><a href="#mstopBatteryStatus4" data-toggle="tab">Return</a></li><li ><a href="#mstopBatteryStatus6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-stopBatteryStatus'><div class="tab-pane fade active in" id="mstopBatteryStatus1"><p>If the battery status is being retrieved via callback by a previously invoked call to batteryStatus, this method will stop the callback from firing.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"></p></div></p></div><div class="tab-pane fade" id="mstopBatteryStatus2"></div><div class="tab-pane fade" id="mstopBatteryStatus3"></div><div class="tab-pane fade" id="mstopBatteryStatus4"><div><p><strong>Synchronous Return:</strong></p><ul><li>Void</li></ul></div></div><div class="tab-pane fade" id="mstopBatteryStatus6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.Battery.stopBatteryStatus()</code> </li><li>Ruby: <code>Rho::Battery.stopBatteryStatus()</code></li></ul></li></ul></div></div></div>  </div></div>
<a name='Properties'></a>
<h2><i class='icon-list'></i>Properties</h2>

<a name='paverageCurrentConsumption'></a><div class=' method  js ruby android' id='paverageCurrentConsumption'><h3><strong  >averageCurrentConsumption</strong><span style='font-size:.7em;font-weight:normal;'> : <span class='text-info'>INTEGER</span>  </span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#paverageCurrentConsumption1" data-toggle="tab">Description</a></li><li ><a href="#paverageCurrentConsumption6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-averageCurrentConsumption'><div class="tab-pane fade active in" id="paverageCurrentConsumption1"><p>Supported only by the MC18 device. Sets an average current consumption (in mA) that is used in subsequent power-related calculations. If set to 0, the value will be provided by the device driver based on the running average.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"> </p></div></p></div><div class="tab-pane fade" id="paverageCurrentConsumption2"></div><div class="tab-pane fade" id="paverageCurrentConsumption5"></div><div class="tab-pane fade" id="paverageCurrentConsumption6"><div><p><strong>Property Access:</strong></p><ul><li><i class="icon-file"></i>Instance: This property can be accessed via an instance object of this class: <ul><li><code>myObject.averageCurrentConsumption</code></li></ul></li></ul></div></div></div>  </div><a name='prefreshInterval'></a><div class=' method  js ruby ios' id='prefreshInterval'><h3><strong  >refreshInterval</strong><span style='font-size:.7em;font-weight:normal;'> : <span class='text-info'>INTEGER</span>  </span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#prefreshInterval1" data-toggle="tab">Description</a></li><li ><a href="#prefreshInterval2" data-toggle="tab">Params</a></li><li ><a href="#prefreshInterval6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-refreshInterval'><div class="tab-pane fade active in" id="prefreshInterval1"><p>A callback to retrieve the battery strength can be specified to occur periodically with the batteryStatus method. This value specifies the periodicity of the callback as well as the update frequency of the battery icon, if shown. Setting this value to zero will disable the batteryStatus callback. Note that most platforms will not support periodic updates to the battery level, this is only supported on Windows Mobile / CE / Embedded.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"> </p></div></p></div><div class="tab-pane fade" id="prefreshInterval2"><p><strong>Default:</strong> 5000</p></div><div class="tab-pane fade" id="prefreshInterval5"></div><div class="tab-pane fade" id="prefreshInterval6"><div><p><strong>Property Access:</strong></p><ul><li><i class="icon-file"></i>Instance: This property can be accessed via an instance object of this class: <ul><li><code>myObject.refreshInterval</code></li></ul></li></ul></div></div></div>  </div><a name='ptripDuration'></a><div class=' method  js ruby android' id='ptripDuration'><h3><strong  >tripDuration</strong><span style='font-size:.7em;font-weight:normal;'> : <span class='text-info'>INTEGER</span>  </span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#ptripDuration1" data-toggle="tab">Description</a></li><li ><a href="#ptripDuration6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-tripDuration'><div class="tab-pane fade active in" id="ptripDuration1"><p>Supported only by the MC18 device. Sets the desired working time (in minutes) out of the cradle, which is used in subsequent power-related calculations. If set to 0, the driver default value of 45 minutes will be used.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"> </p></div></p></div><div class="tab-pane fade" id="ptripDuration2"></div><div class="tab-pane fade" id="ptripDuration5"></div><div class="tab-pane fade" id="ptripDuration6"><div><p><strong>Property Access:</strong></p><ul><li><i class="icon-file"></i>Instance: This property can be accessed via an instance object of this class: <ul><li><code>myObject.tripDuration</code></li></ul></li></ul></div></div></div>  </div>
<a name='Examples'></a>
<h2><i class='icon-edit'></i>Examples</h2>

<a name='e0'></a><div class=' example' id='e0'><div class="accordion-group"><div class="accordion-heading"><span class="accordion-toggle"   href="#cExample0"><strong>Retrieve the Battery status</strong></div><div id="cExample0" class="accordion-body">  <div class="accordion-inner">
<p>Synchronously: If you are interested only in the current battery level, for example to decide whether you have sufficient battery for the worker to start their shift, then you can immediately determine the level as follows</p>
<ul class='nav nav-tabs' id='exI0-S0Tab'><li class='active'><a href='#exI0-S0JS' data-toggle='tab'>JavaScript</a></li><li ><a href='#exI0-S0RUBY' data-toggle='tab'>Ruby</a></li></ul><div class='tab-content'><div class='tab-pane active' id='exI0-S0JS'><pre class='CodeRay'><code>:::javascript

            
  function battery_status_sync(){
    batteryValues = Rho.Battery.batteryStatus({});
    console.log("Battery Level is: " + batteryValues['batteryLifePercent']);
  }
                    
                    </code></pre></div><div class='tab-pane' id='exI0-S0RUBY'><pre class='CodeRay'><code>:::ruby

            
  def battery_status_sync
    batteryValues = Rho::Battery.batteryStatus
    puts "Battery Level is: " + batteryValues['batteryLifePercent']
  end
                    
                    </code></pre></div></div>
<p>Asynchronously:  If you want to be notified of changes to the battery level, then you can register to receive values through a callback</p>
<ul class='nav nav-tabs' id='exI0-S1Tab'><li class='active'><a href='#exI0-S1JS' data-toggle='tab'>JavaScript</a></li><li ><a href='#exI0-S1RUBY' data-toggle='tab'>Ruby</a></li></ul><div class='tab-content'><div class='tab-pane active' id='exI0-S1JS'><pre class='CodeRay'><code>:::javascript

            
  function battery_status_async(){
    console.log("Registering Battery Callback");
    Rho.Battery.batteryStatus({},batteryEvent);
  }

   function batteryEvent(params){
    console.log("Battery Event Fired:");
    console.log("Battery Event (Asynchronous). AC Line Status: " + params["acLineStatus"] + " Battery Life Percent: " + params["batteryLifePercent"] + " Backup Battery Life Percent: " + params["backupBatteryLifePercent"] + " Status: " + params["batteryStatus"] + " Battery Life Known: " + params["batteryLifeKnown"] + " Backup Battery Life Known: " + params["backupBatteryLifeKnown"]);
  }
  
                    </code></pre></div><div class='tab-pane' id='exI0-S1RUBY'><pre class='CodeRay'><code>:::ruby

            
  def battery_status_async
    puts "Registering Battery Callback"
    Rho::Battery.batteryStatus(url_for(:action =&gt; :batteryEvent))
  end

   def batteryEvent
    puts "Battery Event Fired: #{@params}"
    puts "Battery Event (Asynchronous). AC Line Status: #{@params["acLineStatus"]}, Battery Life Percent: #{@params["batteryLifePercent"]}, Backup Battery Life Percent: #{@params["backupBatteryLifePercent"]}, Status: #{@params["batteryStatus"]}, Battery Life Known: #{@params["batteryLifeKnown"]}, Backup Battery Life Known: #{@params["backupBatteryLifeKnown"]}"
  end
  
                    </code></pre></div></div>  </div></div></div></div><a name='e1'></a><div class=' example' id='e1'><div class="accordion-group"><div class="accordion-heading"><span class="accordion-toggle"   href="#cExample1"><strong>Working with the Battery indicator</strong></div><div id="cExample1" class="accordion-body">  <div class="accordion-inner">
<p>If you just want to display the battery indicator in the default position and default color, then call as follows.</p>
<ul class='nav nav-tabs' id='exI1-S0Tab'><li class='active'><a href='#exI1-S0JS' data-toggle='tab'>JavaScript</a></li><li ><a href='#exI1-S0RUBY' data-toggle='tab'>Ruby</a></li></ul><div class='tab-content'><div class='tab-pane active' id='exI1-S0JS'><pre class='CodeRay'><code>:::javascript

            
  function show_battery_icon(){
    Rho.Battery.showIcon({});
  }
                    
                    </code></pre></div><div class='tab-pane' id='exI1-S0RUBY'><pre class='CodeRay'><code>:::ruby

            
  def show_battery_icon
    Rho::Battery.showIcon({})
  end
                    
                    </code></pre></div></div>
<p>To display the battery icon at the default position but blue and vertical specify as follows.</p>
<ul class='nav nav-tabs' id='exI1-S1Tab'><li class='active'><a href='#exI1-S1JS' data-toggle='tab'>JavaScript</a></li><li ><a href='#exI1-S1RUBY' data-toggle='tab'>Ruby</a></li></ul><div class='tab-content'><div class='tab-pane active' id='exI1-S1JS'><pre class='CodeRay'><code>:::javascript

            
  function show_battery_icon(){
    Rho.Battery.showIcon({ left: 0, top: 40, color: '#FF0000', layout: Rho.Battery.BATTERY_LAYOUT_RIGHT });
  }
  
                    </code></pre></div><div class='tab-pane' id='exI1-S1RUBY'><pre class='CodeRay'><code>:::ruby

            
  def show_battery_icon
    Rho::Battery.showIcon { left: 0, top: 40, color: '#FF0000', layout: Rho::Battery.BATTERY_LAYOUT_RIGHT }
  
                    </code></pre></div></div>  </div></div></div></div>
<a name='Remarks'></a>
<h2><i class='icon-warning-sign'></i>Remarks</h2>

<a name='r0'></a><div class=' remarks' id='r0'><div class="accordion-group"><div class="accordion-heading"><span class="accordion-toggle"  href="#cRemark0"><strong>Icon Layout</strong></div><div id="cRemark0" class="accordion-body">  <div class="accordion-inner"><p>Windows Mobile / CE and Handheld devices support the display of a small battery icon. This section explains the layout parameter, which can be provided to showIcon(&hellip;).</p>

<h2>Layout:Left</h2>

<p><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAI4AAABiCAIAAAAJGXymAAAAAXNSR0IArs4c6QAAAAZiS0dEAP8A/wD/oL2nkwAAAAlwSFlzAAALEwAACxMBAJqcGAAAAAd0SU1FB9sIBQouCLvI+XcAAAGaSURBVHja7d3tjYIwAIBhe3EARnAD2aCMwggdwREYwVFgA9xAN3AD7u/luJy1UfHjeX+aapo+oeDlwDBN0yqjEMJKyxVj/LIKrxIqVEKFSqiECpVQCRUqPVfrG35WjLFpGmt6bfv9/nQ6PZSqaZrdbmfpr63v+xwqG6BzlVCh0iddAd6vcRxTSgVvbNu2bdufr6SUxnEsO/nfaUpvRXU+n4dhKLsonauXfdT9pmQDfLsNsPhA1qOpig9kuQIUKlRCJVSohEqoUAnVR5f7l/XtdltV1f9jNpuNBV2equs6/41kAxQqVEIlVKiESqhQCZVQoRIqoUIlVKiESqhQCZVQoRIqoUIlVEKFSouWeydISuniTTvFz+TSLakOh8PFMe7qsQEKFSqhQiVUQoVKqITqg1pXVRVjvDjOU6OXp6rr+tdPKPxZCMFi2QCVd1S9xCwzd+l584ep1XX9bFN6K6rMXTqnruuebUo2QOcqoRIqV4Cz+r73u8AFHY/HnGFhmqascb4CL1qM0QboXCVUqIRKqFAJlVChEioV9Q38vGIHwMPikwAAAABJRU5ErkJggg==" title="Battery Indicator" alt="Left Layout Battery Indicator" /></p>

<h2>Layout:Right</h2>

<p><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAI4AAABiCAIAAAAJGXymAAAAAXNSR0IArs4c6QAAAAZiS0dEAP8A/wD/oL2nkwAAAAlwSFlzAAALEwAACxMBAJqcGAAAAAd0SU1FB9sIBQouHk8cTCYAAAGRSURBVHja7d3hbYJAGIBh0nQANpAR2ADdhE1khBuBUc4R3IARbgP7t6lpOAgnYp7np7GG8IaPq9Gz6rquYlePPF/O1FFIJRVSSYVUSCUVUiGVVLyX75wnnU6nvu+drKVijLfb7aWpmqYZhsGpX2oYhg1TGYDuVUglFR+xAnw2juM4jiv+MITQtu3vR87n84rXads2hFDokD4q1TRN69Y2KaU/j2y1RtrwkAxA9riq2FDOLSCEINX+cuZ2SskAtFhHKqmQCqmkQiqkkor34o2lgpqmmf2mYUrpfr9LtbO+72c/6RVjvFwuBqB7FVIhlVRIhVRSIRVSSYVUSCUVUkmFVEglFVIhlVRIhVRSIRVSSYVUZPBNkIJyNlPL34xLqoJWb6ZmALpXIRVSSYVUSCUVUknFAXhjaX+zm/tUVVXXtVT7izEagAZg3p5c/13IKy7/Z88/uLLhIR14UHZd92C56/WakyDz1QxAi3WkkoqPWAFO0+R3gcv9w7TlCpCirADdq5AKqaRCKqSSCqmQSipK+gHwTQYZtwZTVQAAAABJRU5ErkJggg==" title="Battery Indicator" alt="Right Layout Battery Indicator" /></p>

<h2>Layout:Up</h2>

<p><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAGIAAACOCAIAAABFQUqgAAAAAXNSR0IArs4c6QAAAAZiS0dEAP8A/wD/oL2nkwAAAAlwSFlzAAALEwAACxMBAJqcGAAAAAd0SU1FB9sIBQouKm6ouJMAAAGWSURBVHja7d3RkYIwFEBR3LEAO9AOpINnKZaQDmjBkrAD7EA7sAO2gP1YJjFonHO/HYQzJA5gdDPPc1fQNE3P57P77Ha7Xd/3RZuYy4qI7uOLiMLD/Om0IEyYMGHChAmTMGHCtHabFd7jeDxeLpdKG08p3W632oewXecC/XQ61du4QWduwoQJkzBhwoQJ0xe26GIlIkquNg6HQ70DOJ/PJfs2juP1en3NrgzDMH9pwzAYdOYmTJgwYRImTJgwYcKESZgwYcKECRMmYcKECRMmTJiEaWmZX59vYl3937JX2mcypZRe9n2XFYuIcRwNOnMTJkyYMAkTJkyYMGHCJEyYMGFqocy7l4WL/d5V9gLIfCaDTpgwYWrzky6lNE1Tc0fb933ez7flP/Vt8XGmQYcJEyZMmIQJEyZMmDBhEiZMmDC1U+bdy7wlDc4mTMKE6QOmcMsOF2XZoTBhwoQJEyZMwoQJEyZMmDAJE6bKWXZYmcmgEyZMmN7cZsmL9vt91f/mfWP3+/3xeDgPJEmSJDV6TRcRFP7tF5VvpjOfDnyyAAAAAElFTkSuQmCC" title="Battery Indicator" alt="Up Layout Battery Indicator" /></p>

<h2>Layout:Down</h2>

<p><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAGIAAACOCAIAAABFQUqgAAAAAXNSR0IArs4c6QAAAAZiS0dEAP8A/wD/oL2nkwAAAAlwSFlzAAALEwAACxMBAJqcGAAAAAd0SU1FB9sIBQotLKzmTmUAAAF9SURBVHja7d3hkUNQFIDR2EkBOqAEHVyl6EQLSkgpdKAEOtCBbcGwrCfn+51InMmTEXMji4iXJEmSJCnJsi0PKoqiLMtH7v80TfM8/8222rZdH1rbtlsEfiwoTJgw3bD3vqd9Pp9pmpLb27Ism6a5lGkYhuSYImIfk0WHCRMmTJgwCRMmTJgwYcIkTJgwXd7OXy+7rluWJbm9zfP8Uqaqqiw6YcKEKU2muq6zBKvr2qfJosOECRMmYcKECRMmTJiECRMmTIn0XRegdr/t/ZczLTphwoQpzW86Y4dbmYwdChMmTJgwYcIkTJgwYcKECZMwYTozY4dnMhk7FCZMmDBhwoRJmDBhwoQJEyZhwoQJEyZMmIQJEyZMmDB9Y5vu6xsRu/9Y83Vg2G9LBwcg+76/y2BgRJx3Y96IsOgcmzBhwiRMmDBhwvTA3he8xrIsfd+ft/ErnJI4pfr3k0qLzrEJEyZMmDAJEyZMmG5Ztq7rkeeP43j/Sfs8zw+Ouv8CFfQAjSZxPXkAAAAASUVORK5CYII=" title="Battery Indicator" alt="Down Layout Battery Indicator" /></p>
  </div></div></div></div><a name='r1'></a><div class=' remarks' id='r1'><div class="accordion-group"><div class="accordion-heading"><span class="accordion-toggle"  href="#cRemark1"><strong>Overlapping Indicators</strong></div><div id="cRemark1" class="accordion-body">  <div class="accordion-inner"><p>The position of the signal and battery indicators should not be set to overlap.</p>
  </div></div></div></div><a name='r2'></a><div class=' remarks' id='r2'><div class="accordion-group"><div class="accordion-heading"><span class="accordion-toggle"  href="#cRemark2"><strong>Screen Orientation</strong></div><div id="cRemark2" class="accordion-body">  <div class="accordion-inner"><p>The indicator positions are absolute and so when rotating the screen you should also move the indicator positions accordingly to accommodate the new screen layout.</p>
  </div></div></div></div>
<a name='License'></a>
<h2><i class='icon-shopping-cart'></i>Licensing</h2>

<div class="accordion" id="accordion">This API is considered a RhoElements API and therefore requires a paid subscription to use (either Silver or Gold level). You can review the subscription plans on our licensing page <a href='/guide/licensing'>here</a> or on <a href='http://rhomobile.com/pricing/'>rhomobile.com/pricing</a>.</div></div>